--- a/fileadmin/templates/scipio/ext/news/Templates/News/List.html
+++ b/fileadmin/templates/scipio/ext/news/Templates/News/List.html
@@ -8,7 +8,7 @@
 <f:section name="content">
 	<f:if condition="{news}">
 		<f:then>
-			<div class="news-list-view" data-source="fromFileadmin">
+			<div class="row" id="articles">
 				<f:if condition="{settings.hidePagination}">
 					<f:then>
 						<f:for each="{news}" as="newsItem" iteration="iterator">
