Logo per CSS statt per JS fixieren

--- a/fileadmin/templates/scipio/partials/header.html
+++ b/fileadmin/templates/scipio/partials/header.html
@@ -33,4 +33,4 @@
             <f:cObject typoscriptObjectPath="lib.navigation" />
         </ul>
     </div>
-    <div id="content" class="large-8 small-12 columns">
+    <div id="content" class="large-push-2 large-10 small-12 columns">
